// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should handle errors 1`] = `
<ContextConsumer>
  <Component />
</ContextConsumer>
`;

exports[`should handle no code 1`] = `

<div>
</div>

`;

exports[`should render component renderer 1`] = `
<ContextProvider
  value={
    Object {
      "codeRevision": 0,
      "config": Object {
        "compilerConfig": Object {
          "jsx": undefined,
        },
      },
    }
  }
>
  <Consumer(Preview)
    code=
<button>
  OK
</button>

    evalInContext={[Function]}
  />
</ContextProvider>
`;

exports[`should update 1`] = `

<div>
  <button>
    OK
  </button>
</div>

`;

exports[`should wrap code in Fragment when it starts with < 1`] = `

<div>
  <span>
  </span>
  <span>
  </span>
</div>

`;
